[package]
name = "road_generation"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
repository = "https://github.com/DomWilliams0/road-generation"
description = """Procedural road generation"""
readme = "README.md"

[dependencies]
fux_kdtree = "*"
rand = "0.3"
cgmath = "0.14.1"
toml = "0.4.1"
serde = "1.0"
serde_derive = "1.0.6"
